# Platex

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  mkpyqt.py  platex.pyw  resources.qrc  setup.py
avrdude/: PlatexFirmata.hex  StandardFirmata.hex  avrdude.conf
avrdude/PlatexFirmata/: Firmata.cpp  PlatexFirmata.ino
firmware/: CMakeLists.txt
firmware/PlatexFirmata/: CMakeLists.txt  Makefile-linux  Makefile-mac  PFirmata.cpp  PFirmata.h  PlatexFirmata.ino
pyfirmata/: boards.py  pyfirmata.py  util.py
ui/: analog.py  digital.py  mainwindow.py  mainwindow.ui  mode.py  motor.py  pwm.py  selectportdlg.py  sequencer.py  servo.py
